--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eDr-zW-4Ps">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eDr-zW-4Ps">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -293,9 +294,8 @@
                                 <viewLayoutGuide key="safeArea" id="TNQ-0M-NZu"/>
                                 <color key="backgroundColor" red="0.045809175440000002" green="0.83229312420000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ose-WQ-Zni">
-                                <rect key="frame" x="124" y="130" width="145" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ose-WQ-Zni">
+                                <rect key="frame" x="110" y="131" width="173" height="32"/>
                                 <segments>
                                     <segment title="輸入"/>
                                     <segment title="掃描條碼"/>
@@ -304,16 +304,14 @@
                                     <action selector="segmentAction:" destination="G1I-ja-Op3" eventType="valueChanged" id="Jqz-vm-SgP"/>
                                 </connections>
                             </segmentedControl>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dxi-Xw-GwC">
-                                <rect key="frame" x="15" y="192" width="362" height="577"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dxi-Xw-GwC">
+                                <rect key="frame" x="15" y="192" width="363" height="575"/>
                                 <connections>
                                     <segue destination="6qh-dF-NMs" kind="embed" id="oLB-V5-DHz"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zfn-m5-Gx5">
-                                <rect key="frame" x="15" y="192" width="362" height="577"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfn-m5-Gx5">
+                                <rect key="frame" x="15" y="192" width="365" height="575"/>
                                 <connections>
                                     <segue destination="o5O-tf-R97" kind="embed" id="6Er-ca-LWj"/>
                                 </connections>
@@ -321,6 +319,19 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Oe3-NM-Z57"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zfn-m5-Gx5" secondAttribute="trailing" constant="13" id="1eG-OR-RGo"/>
+                            <constraint firstItem="zfn-m5-Gx5" firstAttribute="leading" secondItem="IFR-4c-isG" secondAttribute="leading" constant="15" id="58N-Sa-l66"/>
+                            <constraint firstItem="zfn-m5-Gx5" firstAttribute="top" secondItem="ose-WQ-Zni" secondAttribute="bottom" constant="30" id="5Nr-ea-RJm"/>
+                            <constraint firstItem="Dxi-Xw-GwC" firstAttribute="leading" secondItem="IFR-4c-isG" secondAttribute="leading" constant="15" id="R46-UY-dad"/>
+                            <constraint firstItem="Dxi-Xw-GwC" firstAttribute="top" secondItem="ose-WQ-Zni" secondAttribute="bottom" constant="30" id="RYg-VM-z3d"/>
+                            <constraint firstItem="Oe3-NM-Z57" firstAttribute="trailing" secondItem="ose-WQ-Zni" secondAttribute="trailing" constant="110" id="SKk-ac-7N8"/>
+                            <constraint firstItem="ose-WQ-Zni" firstAttribute="leading" secondItem="Oe3-NM-Z57" secondAttribute="leading" constant="110" id="Tg8-uH-rPn"/>
+                            <constraint firstItem="ose-WQ-Zni" firstAttribute="top" secondItem="2IV-tR-Uc3" secondAttribute="bottom" constant="20" id="Xe5-n0-Zaa"/>
+                            <constraint firstAttribute="trailing" secondItem="Dxi-Xw-GwC" secondAttribute="trailing" constant="15" id="YmU-le-awh"/>
+                            <constraint firstAttribute="bottom" secondItem="zfn-m5-Gx5" secondAttribute="bottom" constant="85" id="hSy-rf-SGH"/>
+                            <constraint firstAttribute="bottom" secondItem="Dxi-Xw-GwC" secondAttribute="bottom" constant="85" id="kmM-Jg-yyT"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="ISBN" id="IVd-FY-mlt"/>
                     <connections>
@@ -338,7 +349,7 @@
             <objects>
                 <viewController id="6qh-dF-NMs" customClass="TypeViewController" customModule="Goldence" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="u3l-nk-YBp">
-                        <rect key="frame" x="0.0" y="0.0" width="362" height="577"/>
+                        <rect key="frame" x="0.0" y="0.0" width="363" height="575"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7c8-Z7-jJp">
@@ -395,15 +406,40 @@
             <objects>
                 <viewController id="o5O-tf-R97" customClass="ScanViewController" customModule="Goldence" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="03E-I2-C0S">
-                        <rect key="frame" x="0.0" y="0.0" width="362" height="577"/>
+                        <rect key="frame" x="0.0" y="0.0" width="365" height="575"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tbi-O3-1lH">
+                                <rect key="frame" x="5" y="0.0" width="355" height="500"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="rRg-fb-NaC"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZfF-VB-wfA">
+                                <rect key="frame" x="0.0" y="556" width="362" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="BsI-KT-NDS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Tbi-O3-1lH" firstAttribute="top" secondItem="03E-I2-C0S" secondAttribute="top" id="07z-J1-x9a"/>
+                            <constraint firstItem="Tbi-O3-1lH" firstAttribute="leading" secondItem="BsI-KT-NDS" secondAttribute="leading" constant="5" id="XLE-Sg-m4J"/>
+                            <constraint firstItem="Tbi-O3-1lH" firstAttribute="trailing" secondItem="BsI-KT-NDS" secondAttribute="trailing" constant="-5" id="zak-vW-n5j"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="barView" destination="Tbi-O3-1lH" id="qmU-dU-DqS"/>
+                        <outlet property="textLabel" destination="ZfF-VB-wfA" id="TBg-HV-xj1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rkt-P1-g6G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5250" y="1044"/>
+            <point key="canvasLocation" x="5248.8549618320612" y="1043.3098591549297"/>
         </scene>
     </scenes>
     <resources>
